--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,19 @@
 <footer class="footer">
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS订阅</a>
-  {%- comment %} 请保留主题来源，么么哒~ {% endcomment %}
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
+<p style="text-align:center;padding-top:5px;">本站运行：<span id="days">0</span>天
+</p>
+<script>
+    var s1 = '2020-01-03';
+    s1 = new Date(s1.replace(/-/g, "/"));
+    s2 = new Date();
+    var days = s2.getTime() - s1.getTime();
+    var number_of_days = parseInt(days / (1000 * 60 * 60 * 24));
+    document.getElementById('days').innerHTML = number_of_days;
+</script>
+
 </footer>
 <div id="to-top">
   <span></span>
