--- a/i/style.css
+++ b/i/style.css
@@ -2,7 +2,7 @@ body {
     font-size: 18px;
     color: #6c767d;
     background-color: #ebf1f5;
-    background-image: url(https://i.loli.net/2020/09/14/v4Si8BIupOVcwm6.jpg);
+    background-image: url(https://s4.ax1x.com/2022/02/06/HnzsRs.png);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -144,7 +144,7 @@ strike {
 
 .photo-bg {
     /* background-image: url(assets/background.jpg); */
-    background-image: url(https://tva1.sinaimg.cn/large/0072Vf1pgy1foxk456b0fj31hc0u0dxu.jpg);
+    background-image: url(https://s4.ax1x.com/2022/02/06/HnzsRs.png;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
