--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
 <p style="text-align:center;padding-top:5px;">本站运行：<span id="days">0</span>天 ｜
-由<a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral" target="_blank"><img src="https://s2.loli.net/2022/02/06/IhC2UVvfy6uS7Pk.png" ></a>
+由<a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral" target="_blank" rel="nofollow"><img src="https://s2.loli.net/2022/02/06/IhC2UVvfy6uS7Pk.png" style="width:50px;" ></a>
 提供CDN加速/云存储服务
 </p>
 <script>
