--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="//cdn.bootcss.com/gitalk/1.5.0/gitalk.min.css">
+<script src="//cdn.bootcss.com/gitalk/1.5.0/gitalk.min.js"></script>
 {% include head.html -%}
 <body ondragstart="return false;">
 {% include header.html -%}
