--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="//cdn.bootcss.com/gitalk/1.5.0/gitalk.min.css">
-<script src="//cdn.bootcss.com/gitalk/1.5.0/gitalk.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 {% include head.html -%}
 <body ondragstart="return false;">
 {% include header.html -%}
@@ -22,12 +22,10 @@
 <script>  var gitalk = new Gitalk({
   clientID: '107ccf93ebf75ad753bf', 
   clientSecret: '22481d8d165b256890d7b3ac34017dd1e9742a24', 
-  repo: 'wuko233/wuko233.github.io', 
+  repo: 'wuko233.github.io', 
   owner: 'wuko233', 
   admin: ['wuko233'], 
   id: location.pathname,    
-  title: document.title,
-  body:  '文章链接：'+ decodeURIComponent(location.origin+location.pathname),
   distractionFreeMode: false
 })
 gitalk.render('gitalk-container');
