--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -26,6 +26,8 @@
   owner: 'wuko233', 
   admin: ['wuko233'], 
   id: md5(location.pathname),    
+  title: document.title,
+  body:  '文章链接：'+ decodeURIComponent(location.origin+location.pathname),
   distractionFreeMode: false
 })
 gitalk.render('gitalk-container');
