--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="footer">
   <span>{{ site.footerText }}</span>
-  <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS订阅</a>
+  <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS</a>
+  <a href="{{ site.baseurl }}/static/xml/sitemap.xml">SITEMAP</a>
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
 <p style="text-align:center;padding-top:5px;">本站运行：<span id="days">0</span>天｜本站总访问量<span id="busuanzi_value_site_pv">0</span>次
